2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Re-ordered.
	Add strncmp.S and strncmp-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/strncmp-stub.c: New file.
	* libc/machine/aarch64/strncmp.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add
	memcpy.c memcpy-stub.c memset.S memset-stub.c strcmp.S
	strcmp-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/memcpy-stub.c: New file.
	* libc/machine/aarch64/memcpy.S: New file.
	* libc/machine/aarch64/memset-stub.c: New file.
	* libc/machine/aarch64/memset.S: New file.
	* libc/machine/aarch64/strcmp.S: New file.
	* libc/machine/aarch64/strcmp-stub.c: New file.

2013-01-08  Jeff Johnston  <jjohnstn@redhat.com>

	* MAINTAINERS: Add Richard Earnshaw as Arm co-maintainer
	and add Richard and Marcus Shawcroft as aarch64 maintainers.

2013-01-07  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/memcpy.S (memcpy): Check if _MIPS_SIM is set.

2012-12-20  Jeff Johnston  <jjohnstn@redhat.com>

        * NEWS: Update with 2.0.0 info.
        * README: Ditto.
        * acinclude.m4: Change version number to 2.0.0.
        * aclocal.m4: Regenerated.
        * configure: Ditto.
        * Makefile.in: Regenerated.
        * doc/aclocal.m4: Ditto.
        * doc/configure: Ditto.
        * libc/*/aclocal.m4: Ditto.
        * libc/*/configure: Ditto.
        * libc/libc.texinfo: Ditto.
        * libm/*/aclocal.m4: Ditto.
        * libm/*/configure: Ditto.
        * libm/libm.texinfo: Ditto.
        * libc/sys/linux/shared.ld: Add VERS_2.0

2012-12-19  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdlib/strtod.c (_strtod_r): Revert change from 2011-05-16.

2012-12-18  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/math.h: Remove the log2f macro.

2012-12-18  Craig Howland  <howland@LGSInnovations.com>
