@@ -11,6 +11,8 @@ noinst_LIBRARIES = lib.a
 lib_a_SOURCES =
 lib_a_SOURCES += memcpy-stub.c
 lib_a_SOURCES += memcpy.S
+lib_a_SOURCES += memmove-stub.c
+lib_a_SOURCES += memmove.S
 lib_a_SOURCES += memset-stub.c
 lib_a_SOURCES += memset.S
 lib_a_SOURCES += setjmp.S
